force-app/main/default/objects/SESOC__SESOCSettings__c/SESOC__SESOCSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>E-Signature Settings</description>
    <label>SESOC - E-Signature Settings</label>
</CustomObject>