force-app/main/default/objects/SESOC__SESOCSettings__c/fields/SESOC__LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>SESOC__LoggingLevel__c</fullName>
    <description>The Administrator populates this text field to establish the logging level to capture. By default, it is blank.</description>
    <label>Logging Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>