force-app/main/default/objects/SESOC__SESOCSettings__c/fields/SESOC__LoggingProvider__c.field-meta.xml
<CustomField>
    <fullName>SESOC__LoggingProvider__c</fullName>
    <description>The Administrator populates this text field to establish the logging provider to use. By default, it is blank.</description>
    <label>Logging Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>