force-app/main/default/objects/SESOC__SESOCSettings__c/fields/SESOC__VendorProvider__c.field-meta.xml
<CustomField>
    <fullName>SESOC__VendorProvider__c</fullName>
    <description>The Administrator populates this text field to establish the vendor provider to use. By default, it is blank.</description>
    <label>Vendor Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>